class Cidade {
  final int id;
  final String uf;
  final String nome;
  final String regiao;

  Cidade(
      {required this.id,
      required this.uf,
      required this.nome,
      required this.regiao});
}
